--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Alex Wong</title>
+    <title>Tan Wei Zhi</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -72,7 +72,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Alex Wong</h1>
+                <h1 id="homeHeading">Wei Zhi</h1>
                 <hr><br><br>
                 <h3>Welcome to my site!</h3><br>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
